Fixed issue on mobile with videos

--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ img {
     max-height: 100%;
 }
 
+video {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    padding-bottom: 10px;
+}
+
 iframe[src*=youtube] {
     display: block;
     margin: 0 auto;
